R4.4.2
	-запас по краям на ортофото
R4.4.1
	-пороги совпадают на орто и перспективной камере
R4.4test
	-поворот модели на 90гр. (иконка для теста, со стрелками беда в fontawesome =( )
R4.3
	-возможность задавать родительско-дочерние отношения категорий(модель, интерфейс редактирования, отображение дроплистом), только до 1 глубины вложенности!
R4.2
	-порог 1-10 на 25%
	-центральный пин больше
	-линейка только в админке
	-шрифт масштаба arial
	-линейка меньше 1мм не выдает нан
	-уменьшены линии линейки, поправлена высота пинов
	-пин линейки ставится точно под курсор с ортокамерой
	-кадр обрезается по модели + линейка
	-постер без масштабной линейки
R4.1.1
    -масштабная линейка с делениями, пороги 1-5-10
    -при отсутствии текстуры заливается color из параметров
    -при наличии текстуры и свойства color в настройках - текстура оттеняется color'ом
    -при сохранении скриншота, сохраняется величина FOV
	-описание предмета на странице скриншота
	-code clean
R4
	-система UI в пространстве экрана
	-масштабная линейка переделана полностью. не растягивается при масштабировании. размещена над меню справа. соответствует образцу(или нет?)
	-пустые области ортофото обрезаются
	-кнопка переключения ортокамеры выделена рамкой
R3.3.2
	-прорисовки при отключенной текстуре
	-линейка и выравнивание взаимоисключают друг друга
	-активное состояние для кнопок подсветки и меню ортокамеры
	-чекбокс белого фона
	-убрана кнопка зума
	-исправлена ошибка при фото без выранивания(фотает в любом состоянии)
	-кнопка смены текстуры(в сабменю) не отображается, если текстура одна
	-белый цвет модели без текстуры
R3.2
	-рамка вокруг нажатой кнопки во вьюхе, +выделение активной кнопки ортокамеры(не финальный вариант!);
	-кнопка ортофото в линию с разрешением;
R3.1
	-outline
R3
	-масштабная линейка

R2hotfix2
	-; в параметрах drawings
R2hotfix1
	-одинарные кавычки в параметрах drawings
R2
	-ссылка с параметрами drawings
	-тултипы для всех кнопок вьювера
	-настройка ширины окна параметров drawings