@@ -22,7 +22,7 @@ class View3dAsset extends AssetBundle
         'js/three/dat.gui.min.js',
         'js/three/three.min.js?123',
         'js/three/OrbitControls.js?123',
-        'js/three/OBJLoader.js',
+        'js/three/OBJLoader.js?1',
         'js/three/MTLLoader.js',
         'js/three/UTF8Loader.js',
         'js/three/GLTFLoader.js',
@@ -35,9 +35,9 @@ class View3dAsset extends AssetBundle
         'js/three/postprocessing/OutlinePass.js?123',
         'js/jquery.fancybox.min.js',
         'js/colorpicker.min.js',
-        'js/viewer.js?4',
+        'js/viewer.js?1',
         'js/label.js',
-        'js/loader.object.js?4',
+        'js/loader.object.js?1',
     ];
     public $depends = [
         'yii\web\YiiAsset',
