@@ -1,3 +1,6 @@
+R4.4.3
+	-сохранение rotation объекта
+	-еще немного code clean
 R4.4.2
 	-запас по краям на ортофото
 R4.4.1
